// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > images > getImages > 200 > ok 1`] = `
{
  "images": [
    {
      "_id": "test",
    },
  ],
}
`;

exports[`routes > release > getReleases > 200 > ok 1`] = `
{
  "releases": [
    {
      "_id": "test",
    },
  ],
}
`;
